--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -14,6 +14,7 @@
     <PackageVersion Include="Autofac" Version="7.0.1" />
     <PackageVersion Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageVersion Include="AWSSDK.DynamoDBv2" Version="3.7.300" />
+    <PackageVersion Include="AWSSDK.SecretsManager" Version="3.7.102" />
     <PackageVersion Include="Azure.Identity" Version="1.13.1" />
     <PackageVersion Include="coverlet.collector" Version="6.0.1" />
     <!-- <PackageVersion Include="FastEndpoints" Version="5.23.0" />
