Terraform and github actions reworked. Added api gateway and lambda infrastructure and deployment scripts. Added github environments concept

--- a/.github/workflows/lambdas-image-deploy.yml
+++ b/.github/workflows/lambdas-image-deploy.yml
@@ -2,7 +2,15 @@ name: Deploy .NET Lambdas as Container Images to AWS ECR
 
 on:
   workflow_dispatch:
-
+    inputs:
+      environment:
+        description: 'Select environment'
+        required: true
+        default: 'development'
+        type: choice
+        options:
+          - development
+          - production
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -21,11 +29,12 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
-      - name: Configure AWS credentials
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::<YOUR_AWS_ACCOUNT_ID>:role/<YOUR_OIDC_ROLE> # Replace with your IAM role ARN
-          aws-region: <YOUR_AWS_REGION> # e.g., us-east-1
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
+          aws-region: ${{ vars.AWS_EU_CENTRAL_1_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
