--- a/.github/workflows/lambdas-mngd-env-deploy.yml
+++ b/.github/workflows/lambdas-mngd-env-deploy.yml
@@ -1,6 +1,9 @@
 name: Deploy .NET Lambdas to AWS Managed Environment
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
     inputs:
       environment:
@@ -15,7 +18,7 @@ on:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment }} # Adjust when clicking the "Run workflow" button in GitHub Actions portal
+    environment: development #${{ inputs.environment }} # Adjust when clicking the "Run workflow" button in GitHub Actions portal
     permissions:
       id-token: write # For OIDC authentication
       contents: read # For checkout
