Updated action to support reading var from the above step

--- a/.github/workflows/lambdas-mngd-env-deploy.yml
+++ b/.github/workflows/lambdas-mngd-env-deploy.yml
@@ -50,8 +50,7 @@ jobs:
     - name: Get changed projects
       id: changed-projects
       run: |
-        # Initialize an empty dictionary
-        echo 'CHANGED_PROJECTS={}' >> $GITHUB_ENV
+        dict="{}"
 
         for project in $(find . -name '*.csproj'); do
           project_dir=$(dirname "$project")
@@ -60,38 +59,38 @@ jobs:
           if [[ "$project_name" == *Lambda ]]; then
             if git diff --name-only HEAD^ HEAD -- "$project_dir" | grep -q .; then
               echo "Found changes in project: $project_name at $project_dir"
-
-              # Append project name and directory to the existing dictionary
-              updated_dict=$(jq --arg key "$project_name" --arg value "$project_dir" \
-                '. + {($key): $value}' <<< "$CHANGED_PROJECTS")
-
-              # Overwrite the environment variable with updated dictionary
-              echo "CHANGED_PROJECTS=$updated_dict" >> $GITHUB_ENV
+              
+              # Append project to dictionary
+              dict=$(echo "$dict" | jq --arg key "$project_name" --arg value "$project_dir" \
+                '. + {($key): $value}')
             fi
           fi
         done
 
+        # Store the final dictionary as an output variable
+        echo "CHANGED_PROJECTS=$dict" >> $GITHUB_OUTPUT
+
     - name: Build and deploy Lambda functions
-      if: env.CHANGED_PROJECTS != ''
+      if: steps.changed-projects.outputs.CHANGED_PROJECTS != '{}'
       run: |
-        echo "$CHANGED_PROJECTS" | jq -r 'to_entries[] | "\(.key) \(.value)"' | while read project_name project_dir; do
-          echo "Processing $project_name in directory $project_dir"
+        echo '${{ steps.changed-projects.outputs.CHANGED_PROJECTS }}' | jq -r 'to_entries[] | "\(.key) \(.value)"' | while read project_name project_dir; do
+            echo "Processing $project_name in directory $project_dir"
 
-          # # Build and publish
-          # dotnet publish "$project_dir" -c Release -o "$project_dir/publish" -r linux-x64 --self-contained 
+            # # Build and publish
+            # dotnet publish "$project_dir" -c Release -o "$project_dir/publish" -r linux-x64 --self-contained 
 
-          # # Zip function
-          # zip -r "$project_name.zip" "$project_dir/publish" 
-          # echo "Lambda zipped."
+            # # Zip function
+            # zip -r "$project_name.zip" "$project_dir/publish"
+            # echo "Lambda zipped."
 
-          # # Deploy to AWS Lambda
-          # function_name="${project_name}-${{ vars.ENV }}"
-          # aws lambda update-function-code --function-name "$function_name" --zip-file fileb://"$project_name.zip"
-          # echo "Lambda updated."
+            # # Deploy to AWS Lambda
+            # function_name="${project_name}-${{ vars.ENV }}"
+            # aws lambda update-function-code --function-name "$function_name" --zip-file fileb://"$project_name.zip"
+            # echo "Lambda updated."
 
-          # # Cleanup
-          # rm "$project_name.zip"
-          # echo "Zip removed."
-        done
+            # # Cleanup
+            # rm "$project_name.zip"
+            # echo "Zip removed."
+          done
       env:
         AWS_REGION: ${{ vars.AWS_EU_CENTRAL_1_REGION }}
